--- a/assets/webconfig/content/grabber.html
+++ b/assets/webconfig/content/grabber.html
@@ -1,6 +1,20 @@
 
-<h1 class="page-header" lang="en" data-lang-token="main_menu_grabber_conf_token">Capturing Hardware</h1> 
-
 <div class="container-fluid">
-... configuring grabbers.
+	<div class="row">
+		<div class="col-lg-12">
+			<h1 class="page-header" lang="en" data-lang-token="main_menu_grabber_conf_token">Capturing Hardware</h1> 
+			<div class="introd">
+				<h4 lang="en" data-lang-token="remote_general_conf_intro">You can edit the general configuration here.</h4>
+			</div>
+			<hr>
+			<div class="col-lg-12">
+<!--				<form id="grabberConfForm"></form>-->
+				<div id='editor_container'/>
+				<button id='submit'>Submit (console.log)</button>
+			</div>
+		</div>
+	</div>
 </div>
+
+
+<script src="/js/content_grabber.js"></script>
