switch back to botstrap textarea add v4l to components

--- a/assets/webconfig/content/leds.html
+++ b/assets/webconfig/content/leds.html
@@ -107,7 +107,7 @@ start
 						<button lang="en" type="button" class="btn btn-success" id="leds_custom_check">check config</button>
 						<button lang="en" type="button" class="btn btn-success" id="leds_custom_save">save config</button>
 					</div>
-					<textarea rows="25" id="ledconfig" style="width:100%"></textarea>
+					<textarea rows="25" id="ledconfig" class="form-control"></textarea>
 				</div>
 			</div>
 		</div> <!-- left pane -->
