--- a/assets/webconfig/content/remote_components.html
+++ b/assets/webconfig/content/remote_components.html
@@ -13,7 +13,7 @@
 </div>
 
 <script>
-new Enum('SMOOTHING', 'BLACKBORDER', 'KODICHECKER', 'FORWARDER', 'UDPLISTENER', 'BOBLIGHT_SERVER','GRABBER');
+new Enum('SMOOTHING', 'BLACKBORDER', 'KODICHECKER', 'FORWARDER', 'UDPLISTENER', 'BOBLIGHT_SERVER','GRABBER', 'V4L');
 
 function Enum() {
 	for (var i in arguments)
