implement component state

--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -52,19 +52,7 @@
 													<th>Status</th>
 												</tr>
 											</thead>
-											<tbody>
-												<tr>
-													<td>Kodi Watch</td>
-													<td><i class="fa fa-circle component-on"></i></td>
-												</tr>
-													<tr>
-													<td>Blackborder</td>
-													<td><i class="fa fa-circle component-off"></i></td>
-												</tr>
-												<tr>
-													<td>Booteffect</td>
-													<td><i class="fa fa-circle component-off"></i></td>
-												</tr>
+											<tbody id="tab_components">
 											</tbody>
 										</table>
 									</div>
