fix loading display

--- a/assets/webconfig/content/huebridge.html
+++ b/assets/webconfig/content/huebridge.html
@@ -33,7 +33,7 @@
 			<span lang="en" data-lang-token="hue_press_link_modal">Please press link button on the Hue Bridge.</span> <br /><br />
 			<center>
 				<span id="connectionTime"></span><br />
-				<img src="/img/hyperion/ring-alt.svg">
+				<img src="/img/hyperion/ring-alt.svg" />
 			<center>
 		</div>
 		<div class="modal-footer" />
