--- a/assets/webconfig/content/remote.html
+++ b/assets/webconfig/content/remote.html
@@ -26,7 +26,7 @@
 			<div class="panel panel-primary" >
 				<div class="panel-heading"> Input Selection </div>
 				<div class="panel-body">
-					<div id="hyperion_inputs"></div>
+					<div id="hyperion_inputs"><div style="padding:30px;text-align:center"><img src="/img/hyperion/ring-alt.svg"  /></div></div>
 				</div>
 			</div>
 		</div>
@@ -35,7 +35,7 @@
 			<div class="panel panel-primary" >
 				<div class="panel-heading"> Components </div>
 				<div class="panel-body">
-					<div id="componentsbutton"></div>
+					<div id="componentsbutton"><div style="padding:30px;text-align:center"><img src="/img/hyperion/ring-alt.svg"  /></div></div>
 				</div>
 			</div>
 		</div>
