--- a/assets/webconfig/content/remote.html
+++ b/assets/webconfig/content/remote.html
@@ -1,4 +1,10 @@
 <div class="container-fluid">
+<h1 class="page-header" lang="en" data-lang-token="main_menu_leds_conf_token">Remote Control</h1>
+</div>
+
+<div class="container">
+
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
 		<div class="panel panel-primary" >
@@ -40,6 +46,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 </div>
 
 <script src="/js/content_remote.js" ></script>
