--- a/assets/webconfig/content/grabber.html
+++ b/assets/webconfig/content/grabber.html
@@ -10,7 +10,7 @@
 			<div class="col-lg-12">
 <!--				<form id="grabberConfForm"></form>-->
 				<div id='editor_container'/>
-				<button id='submit'>Submit (console.log)</button>
+				<button id='btn_submit'>Submit (console.log)</button>
 			</div>
 		</div>
 	</div>
