--- a/assets/webconfig/content/leds.html
+++ b/assets/webconfig/content/leds.html
@@ -49,7 +49,10 @@
 						<select id="leddevices" class="form-control" style="color:black;width:auto;margin-left:10px;display:inline-block" />
 					</div>
 					<div class="panel-body">
-					... device specific options ... we need some cpp code extension to get schema for all leds
+					<div id="ledDeviceOptions">
+						<div id='editor_container'></div>
+						<button id='btn_submit'>Submit (console.log)</button>
+					</div>
 					
 					
 		<div id="huebridge" class="container-fluid" style="display:none">
