tune editor style

--- a/assets/webconfig/content/generalconf.html
+++ b/assets/webconfig/content/generalconf.html
@@ -7,7 +7,7 @@
 			</div>
 			<hr>
 			<div class="col-lg-12">
-				<div id='editor_holder'></div>
+				<div id='editor_container'></div>
 				<button id='btn_submit'>Submit (console.log)</button>
 			</div>
 		</div>
