webui: some editor style tweaks (#234)
* initial support for leddevice options

* fix schema and editor init

* fix led editor labels and schema

* add some led schemas

* led config: insert current values. not yet perfect, but it works

* tune editor style

--- a/assets/webconfig/content/leds.html
+++ b/assets/webconfig/content/leds.html
@@ -45,13 +45,13 @@
 		<div id="menu_controller" class="tab-pane fade in active" style="padding-top:10px">
 			<div class="panel panel-primary">
 					<div class="panel-heading form-group" style="font-size:90%;white-space:nowrap;">
+						<button id='btn_submit' class="btn btn-success"	style="float:right">Save Settings</button>
 						<label for="leddevices">Controller Type</label>
 						<select id="leddevices" class="form-control" style="color:black;width:auto;margin-left:10px;display:inline-block" />
 					</div>
 					<div class="panel-body">
 					<div id="ledDeviceOptions">
 						<div id='editor_container'></div>
-						<button id='btn_submit'>Submit (console.log)</button>
 					</div>
 					
 					
