--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -36,6 +36,11 @@
 	<script src="js/lib/jquery-lang.js" charset="utf-8" type="text/javascript"></script>
 	<script src="js/lib/js.cookie.js"></script>
 
+	<!-- jquery ui -->
+	<link href="css/jquery-ui/jquery-ui.min.css" rel="stylesheet">
+	<link href="css/jquery-ui/jquery-ui.structure.min.css" rel="stylesheet">
+	<link href="css/jquery-ui/jquery-ui.theme.min.css" rel="stylesheet">
+	
 	<script type="text/javascript">
 		// Create language switcher instance
 		var lang = new Lang();
@@ -195,7 +200,7 @@
 			</ul>
 			<!-- /.navbar-top-left -->
 
-			<div class="navbar-default sidebar" role="navigation">
+			<div id="main-nav" class="navbar-default sidebar" role="navigation">
 				<div class="sidebar-nav navbar-collapse">
 					<ul class="nav" id="side-menu">
 						<li> <a class="active" id="load_dashboard"><i class="fa fa-dashboard fa-fw"></i><span lang="en" data-lang-token="main_menu_dashboard_token">Dashboard</span></a> </li>
@@ -264,6 +269,7 @@
 	<!-- Custom Theme JavaScript -->
 	<script src="/js/lib/sb-admin-2.js"></script>
 
+	<script src="/js/lib/jquery-ui.min.js"></script>
 	<script src="/js/content_index.js"></script>
 </body>
 
