update con_lost page
[skip ci]

--- a/assets/webconfig/content/connection_lost.html
+++ b/assets/webconfig/content/connection_lost.html
@@ -1,17 +1,18 @@
 <div id="wrapper">
-	<div class="container" style="margin-top:40px;">
 		<center>
-			<i class="fa fa-refresh fa-spin" style="font-size:80px"></i>
+			<div class="logoimg" style="width:234px;height:80px;"></div>
 			<div>
 				<h2>Lost connection to Hyperion service!<h1>
 				<hr>
 				<h4>Possible reasons:</h4>
-					<p>1. Hyperion restarts</p>
-					<p>2. You perform an update</p>
-					<p>3. An older browser session</p>
-					<p>3. Hyperion isn't running</p>
+				<p>1. Hyperion restarts</p>
+				<p>2. You perform an update</p>
+				<p>3. An older browser session</p>
+				<p>3. Hyperion isn't running</p>
 				<hr>
-				<h4>This page will be automatically refreshed. We reconnect again after Hyperion is available.</h4>
+				<i class="fa fa-refresh fa-spin" style="font-size:50px"></i>
+				<h4>This page will be automatically refreshed.</h4>
+				<h4>We reconnect again after Hyperion is available.</h4>
 				<a href="/">If not, click me</a>
 			</div>
 		</center>
