fix center position
[skip ci]

--- a/assets/webconfig/content/connection_lost.html
+++ b/assets/webconfig/content/connection_lost.html
@@ -1,5 +1,5 @@
 <div id="wrapper">
-	<div class="container" style="margin:20px 0;">
+	<div class="container" style="margin:20px auto;">
 		<center>
 			<div class="logoimg" style="width:234px;height:80px;"></div>
 			<div>
