update connection lost page
[skip ci]

--- a/assets/webconfig/content/connection_lost.html
+++ b/assets/webconfig/content/connection_lost.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
-	<div class="container" style="margin:20px auto;">
+	<div class="container" style="margin:20px auto;max-width:600px;">
 		<center>
-			<div class="logoimg" style="width:234px;height:80px;"></div>
+		<img src="img/hyperion/hyperionlostconnection.png" alt="Redefine ambient light!">
 			<div>
 				<h2>Lost connection to Hyperion service!<h1>
 				<hr>
