--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -98,6 +98,7 @@
 				</button>
 
 				<a class="navbar-brand" href="/"><img src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!" height="55"></a>
+				<a class="navbar-brand" href="/"><img src="img/hyperion/hyperionlostconnection.png" alt="Redefine ambient light!" style="display:none;"></a>
 
 			</div>
 			<!-- /.navbar-header -->
