--- a/assets/webconfig/content/effects.html
+++ b/assets/webconfig/content/effects.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header" lang="en" data-lang-token="main_menu_general_conf_token">General</h1>
+			<h1 class="page-header" lang="en" data-lang-token="main_menu_general_conf_token">Effects</h1>
 			<div class="introd">
 				<h4 lang="en" data-lang-token="remote_general_conf_intro">You can edit the general configuration here.</h4>
 			</div>
@@ -15,4 +15,4 @@
 </div>
 
 
-<script src="/js/content_generalconf.js"></script>
+<script src="/js/content_effects.js"></script>
