--- a/assets/webconfig/content/colors.html
+++ b/assets/webconfig/content/colors.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header" lang="en" data-lang-token="main_menu_grabber_conf_token">Capturing Hardware</h1> 
+			<h1 class="page-header" lang="en" data-lang-token="main_menu_grabber_conf_token">Image Processing</h1> 
 			<div class="introd">
 				<h4 lang="en" data-lang-token="remote_general_conf_intro">You can edit the general configuration here.</h4>
 			</div>
@@ -18,4 +18,4 @@
 </div>
 
 
-<script src="/js/content_grabber.js"></script>
+<script src="/js/content_colors.js"></script>
