webui: add read/write for all editors

--- a/assets/webconfig/content/kodiconf.html
+++ b/assets/webconfig/content/kodiconf.html
@@ -13,7 +13,7 @@
 
 			<div class="col-lg-12">
 				<div id='editor_container'/>
-				<button id='btn_submit'>Submit (console.log)</button>
+				<button  class="btn btn-success" id='btn_submit'>Save Settings</button>
 			</div>
 
 		</div>
