--- a/assets/webconfig/content/effects.html
+++ b/assets/webconfig/content/effects.html
@@ -3,12 +3,12 @@
 		<div class="col-lg-12">
 			<h1 class="page-header" lang="en" data-lang-token="main_menu_general_conf_token">Effects</h1>
 			<div class="introd">
-				<h4 lang="en" data-lang-token="remote_general_conf_intro">You can edit the general configuration here.</h4>
+				<h4 lang="en" data-lang-token="remote_general_conf_intro">You can edit the effect settings here.</h4>
 			</div>
 			<hr>
 			<div class="col-lg-12">
 				<div id='editor_container'></div>
-				<button id='btn_submit' class="btn btn-danger">Submit - currently will destroy your config!</button>
+				<button  class="btn btn-success" id='btn_submit'>Save Settings</button>
 			</div>
 		</div>
 	</div>
