--- a/assets/webconfig/content/grabber.html
+++ b/assets/webconfig/content/grabber.html
@@ -4,13 +4,12 @@
 		<div class="col-lg-12">
 			<h1 class="page-header" lang="en" data-lang-token="main_menu_grabber_conf_token">Capturing Hardware</h1> 
 			<div class="introd">
-				<h4 lang="en" data-lang-token="remote_general_conf_intro">You can edit the general configuration here.</h4>
+				<h4 lang="en" data-lang-token="remote_general_conf_intro">You can edit your capturing hardware configuration here.</h4>
 			</div>
 			<hr />
 			<div class="col-lg-12">
-<!--				<form id="grabberConfForm"></form>-->
 				<div id='editor_container'/>
-				<button id='btn_submit'>Submit (console.log)</button>
+				<button  class="btn btn-success" id='btn_submit'>Save Settings</button>
 			</div>
 
 		</div>
