--- a/assets/webconfig/content/connection_lost.html
+++ b/assets/webconfig/content/connection_lost.html
@@ -3,18 +3,17 @@
 		<center>
 		<img src="img/hyperion/hyperionlostconnection.png" alt="Redefine ambient light!">
 			<div>
-				<h2>Lost connection to Hyperion service!<h1>
+				<h2 lang="en" data-lang-token="info_conlost_label_title">Lost connection to Hyperion service!</h2>
 				<hr>
-				<h4>Possible reasons:</h4>
-				<p>1. Hyperion restarts</p>
-				<p>2. You perform an update</p>
-				<p>3. An older browser session</p>
-				<p>3. Hyperion isn't running</p>
+				<h4 lang="en" data-lang-token="info_conlost_label_reason">Possible reasons:</h4>
+				<p lang="en" data-lang-token="info_conlost_label_reason1">- Hyperion restarts</p>
+				<p lang="en" data-lang-token="info_conlost_label_reason2">- You perform an update</p>
+				<p lang="en" data-lang-token="info_conlost_label_reason3">- Hyperion isn't running</p>
 				<hr>
 				<i class="fa fa-refresh fa-spin" style="font-size:50px"></i>
-				<h4>This page will be automatically refreshed.</h4>
-				<h4>We reconnect again after Hyperion is available.</h4>
-				<a href="/">If not, click me</a>
+				<h4 lang="en" data-lang-token="info_conlost_label_autorefresh">This page will be automatically refreshed.</h4>
+				<h4 lang="en" data-lang-token="info_conlost_label_autorecon">We reconnect again after Hyperion is available.</h4>
+				<a href="/" lang="en" data-lang-token="info_conlost_label_reload">If not, click me or reload the page</a>
 			</div>
 		</center>
 	</div>
