--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -1,7 +1,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-lg-12">
-						<h1 class="page-header">Dashboard</h1>
+						<h1 class="page-header"><i class="fa fa-dashboard fa-fw"></i><span lang="en" data-lang-token="main_menu_dashboard_token">Dashboard</span></h1>
 						<div class="introd">
 							<h4 lang="en" data-lang-token="dashboard_label_intro">The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.</h4>
 						</div>
@@ -10,25 +10,25 @@
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<i class="fa fa-info-circle fa-fw"></i>
-										<span lang="en" data-lang-token="dashboard_label_infobox_title">Information</span>
+										<span lang="en" data-lang-token="dashboard_infobox_label_title">Information</span>
 									</div>
 									<div class="panel-body">
 										<table class="table borderless">
 											<tbody>
 												<tr>
-													<td lang="en" data-lang-token="dashboard_label_infobox_currenthyp">Your Hyperion version:</td>
+													<td lang="en" data-lang-token="dashboard_infobox_label_currenthyp">Your Hyperion version:</td>
 													<td id="currentversion">unknown</td>
 												</tr>
 												<tr>
-													<td lang="en" data-lang-token="dashboard_label_infobox_latesthyp">Latest version:</td>
+													<td lang="en" data-lang-token="dashboard_infobox_label_latesthyp">Latest version:</td>
 													<td id="latestversion">unknown</td>
 												</tr>
 												<tr>
-													<td lang="en" data-lang-token="dashboard_label_infobox_leddevice">LED type:</td>
+													<td lang="en" data-lang-token="dashboard_infobox_label_leddevice">LED type:</td>
 													<td id="dash_leddevice">unknown</td>
 												</tr>
 												<tr>
-													<td lang="en" data-lang-token="dashboard_label_infobox_device">Device:</td>
+													<td lang="en" data-lang-token="dashboard_infobox_label_device">Device:</td>
 													<td id="dash_systeminfo"></td>
 												</tr>
 											</tbody>
@@ -42,14 +42,14 @@
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<i class="fa fa-eye fa-fw"></i>
-										<span lang="en" data-lang-token="dashboard_label_componentbox_title">Components status</span>
+										<span lang="en" data-lang-token="dashboard_componentbox_label_title">Components status</span>
 									</div>
 									<div class="panel-body">
 										  <table class="table">
 											<thead>
 												<tr>
-													<th>Component</th>
-													<th>Status</th>
+													<th lang="en" data-lang-token="dashboard_componentbox_label_comp">Component</th>
+													<th lang="en" data-lang-token="dashboard_componentbox_label_status">Status</th>
 												</tr>
 											</thead>
 											<tbody id="tab_components">
@@ -62,7 +62,7 @@
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<i class="fa fa-newspaper-o fa-fw"></i>
-										<span lang="en" data-lang-token="dashboard_label_newsbox_title">Latest blog posts</span>
+										<span lang="en" data-lang-token="dashboard_newsbox_label_title">Latest blog posts</span>
 									</div>
 									<div class="panel-body">
 
