--- a/assets/webconfig/content/effects.html
+++ b/assets/webconfig/content/effects.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header" lang="en" data-lang-token="main_menu_general_conf_token">Effects</h1>
+			<h1 class="page-header"><i class="fa fa-spinner fa-fw"></i><span lang="en" data-lang-token="main_menu_effect_conf_token">Effects</span></h1>
 			<div class="introd">
-				<h4 lang="en" data-lang-token="remote_general_conf_intro">You can edit the effect settings here.</h4>
+				<h4 lang="en" data-lang-token="conf_effects_label_intro">Setting up a booteffect/color that is visible after Hyperion startup. Configure a background effect/color which is active, when all capture sources are disabled (also temporarily via Kodi Watch)</h4>
 			</div>
 			<hr>
 			<div class="col-lg-12">
 				<div id='editor_container'></div>
-				<button  class="btn btn-success" id='btn_submit'>Save Settings</button>
+				<button  class="btn btn-success" id='btn_submit' lang="en" data-lang-token="general_button_savesettings">Save Settings</button>
 			</div>
 		</div>
 	</div>
