--- a/assets/webconfig/content/network.html
+++ b/assets/webconfig/content/network.html
@@ -2,9 +2,9 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header" lang="en" data-lang-token="main_menu_grabber_conf_token">Network Services</h1> 
+			<h1 class="page-header"><i class="fa fa-sitemap fa-fw"></i><span lang="en" data-lang-token="main_menu_network_conf_token">Network Services</span></h1> 
 			<div class="introd">
-				<h4 lang="en" data-lang-token="remote_general_conf_intro">You can edit the network configuration here.</h4>
+				<h4 lang="en" data-lang-token="conf_network_label_intro">All network based settings could you find here.</h4>
 			</div>
 			<hr />
 			<div class="col-lg-12">
