--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -120,8 +120,6 @@
 					<!-- /.dropdown-language -->
 				</li>
 				<!-- /.dropdown -->
-				</li>
-				<!-- /.dropdown -->
 				<li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 						<i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -210,13 +208,14 @@
 							<ul class="nav nav-second-level">
 								<li> <a class="inactive" id="load_confLeds"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="main_menu_leds_conf_token">LED Hardware</span></a> </li>
 								<li> <a class="inactive" id="load_confGrabber"><i class="fa fa-camera fa-fw"></i><span lang="en" data-lang-token="main_menu_grabber_conf_token">Capturing Hardware</span></a> </li>
-								<li> <a class="inactive" id="load_confEffects"><i class="fa fa-spinner fa-fw"></i><span lang="en" data-lang-token="main_menu_general_conf_token">Effects</span></a> </li>
+								<li> <a class="inactive" id="load_confEffects"><i class="fa fa-spinner fa-fw"></i><span lang="en" data-lang-token="main_menu_effect_conf_token">Effects</span></a> </li>
 								<li> <a class="inactive" id="load_confColors"><i class="fa fa-photo fa-fw"></i><span lang="en" data-lang-token="main_menu_colors_conf_token">Image Processing</span></a> </li>
 								<li> <a class="inactive" id="load_confKodi"><i class="fa fa-play-circle-o fa-fw"></i><span lang="en" data-lang-token="main_menu_kodiwatch_token">KODI Connector</span></a> </li>
-								<li> <a class="inactive" id="load_confNetwork"><i class="fa fa-wrench fa-fw"></i><span lang="en" data-lang-token="main_menu_network_conf_token">Network</span></a> </li>
+								<li> <a class="inactive" id="load_confNetwork"><i class="fa fa-sitemap fa-fw"></i><span lang="en" data-lang-token="main_menu_network_conf_token">Network</span></a> </li>
 							</ul>
 						</li>
 						<li> <a class="inactive" id="load_remote"><i class="fa fa-wifi fa-fw"></i><span lang="en" data-lang-token="main_menu_remotecontrol_token">Remote Control</span></a>	</li>
+						<li> <a class="inactive" id="load_effectsconfig"><i class="fa fa-cogs fa-fw"></i><span lang="en" data-lang-token="main_menu_effectsconfigurator_token">Effects Configurator</span></a>	</li>
 						<li> <a class="inactive" id="load_support"><i class="fa fa-info fa-fw"></i><span lang="en" data-lang-token="main_menu_support_token">Support</span></a> </li>
 						<li>
 							<a class="inactive"><i class="fa fa-industry fa-fw"></i><span lang="en" data-lang-token="main_menu_system_token">System</span><span class="fa arrow"></span></a>
@@ -235,8 +234,8 @@
 		<div id="page-wrapper" style="padding-top:10px">
 			<div id="hyperion_reload_notify" class="alert alert-warning" style="display:none;padding:10px;margin:0">
 			<div class="panel-danger" style="text-align:right">
-				<div style="float:left">Hyperion Configuration is modified. To make it active, restart Hyperion.</div>
-				<button id="btn_hyperion_reload" class="btn btn-danger">Restart Hyperion</button>
+				<div style="float:left;line-height:33px;" lang="en" data-lang-token="dashboard_alert_message_confedit">Your Hyperion configuration has been modified. To apply it, restart Hyperion.</div>
+				<button id="btn_hyperion_reload" class="btn btn-danger" lang="en" data-lang-token="dashboard_alert_button_restarthyerion">Restart Hyperion</button>
 			</div>
 		</div>
 
@@ -248,17 +247,21 @@
 
 	<div id="container_connection_lost" style="display:none"></div>
 
-	<div id="error_dialog" class="modal fade" role="dialog">
+	<div id="modal_dialog" class="modal fade" role="dialog">
 		<div class="modal-dialog">
 			<!-- Modal content-->
 			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h4 class="modal-title" />
-				</div>
-			<div class="modal-body" />
+			<div class="modal-body">
+				<center>
+					<div class="modal-bodyicon"></div>
+					<h4 class="modal-bodytitle" style="font-weight:bold;text-transform:uppercase;"></h4>
+					<div class="modal-bodycontent"></div>
+				</center>
+			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-primary" data-dismiss="modal">Okay!</button>
+				<center>
+					<div class="modal-footer-button"></div>
+				</center>
 			</div>
 		</div>
 	</div>
