--- a/assets/webconfig/content/effects_configurator.html
+++ b/assets/webconfig/content/effects_configurator.html
@@ -22,8 +22,10 @@
 						<div id="editor_container" />
 					</div>
 					 <div class="panel-footer">
-						<button  class="btn btn-warning" id='btn_test' lang="en" data-lang-token="effectsconfigurator_button_testeffect">Test Effect</button>
-						<button  class="btn btn-primary" id='btn_write' lang="en" data-lang-token="effectsconfigurator_button_saveeffect">Save Effect</button>
+						<button  class="btn btn-warning" id='btn_start_test' lang="en" data-lang-token="effectsconfigurator_button_starttest">Start Effecttest</button>
+						<button  class="btn btn-warning" id='btn_stop_test' lang="en" data-lang-token="effectsconfigurator_button_stoptest">Stop Effecttest</button>
+						<button  class="btn btn-danger" id='btn_cont_test' lang="en" data-lang-token="effectsconfigurator_button_conttest">Toggle continuous testing</button>
+						<button  class="btn btn-primary pull-right" id='btn_write' lang="en" data-lang-token="effectsconfigurator_button_saveeffect">Save Effect</button>
 					</div>
 				</div>
 			</div>
