--- a/assets/webconfig/content/effects_configurator.html
+++ b/assets/webconfig/content/effects_configurator.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header"><i class="fa fa-cogs fa-fw"></i><span lang="en" data-lang-token="main_menu_effectsconfigurator_token">Effects Configurator</span></h1> 
+			<h2 class="page-header"><i class="fa fa-cogs fa-fw"></i><span lang="en" data-lang-token="main_menu_effectsconfigurator_token">Effects Configurator</span></h2> 
 			<div class="introd">
 				<h4 lang="en" data-lang-token="effectsconfigurator_label_intro">Create out of the base effects new effects that are tuned to your liking. Depending on Effect there are options like color, speed, direction and more available.</h4>
 			</div>
@@ -26,6 +26,13 @@
 						<button  class="btn btn-warning" id='btn_stop_test' lang="en" data-lang-token="effectsconfigurator_button_stoptest">Stop Effecttest</button>
 						<button  class="btn btn-danger" id='btn_cont_test' lang="en" data-lang-token="effectsconfigurator_button_conttest">Toggle continuous testing</button>
 						<button  class="btn btn-primary pull-right" id='btn_write' lang="en" data-lang-token="effectsconfigurator_button_saveeffect">Save Effect</button>
+					</div>
+				</div>
+				<div class="panel panel-default" >
+					<div class="panel-heading">
+						<label for="effectsdellist" lang="en" data-lang-token="effectsconfigurator_label_deleffect">Effekt Delete:</label>
+						<select id="effectsdellist" class="form-control" style="color:black;width:auto;margin-left:10px;display:inline-block" />
+						<button  class="btn btn-primary pull-right" id='btn_delete' lang="en" data-lang-token="effectsconfigurator_button_deleffect">Delete Effect</button>
 					</div>
 				</div>
 			</div>
